--- a/styles/site_plan.css
+++ b/styles/site_plan.css
@@ -1,29 +1,30 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
-  --accent2-color: white;
+  --primary-color: #FE6152;
+  --secondary-color: #FBFF12;
+  --accent1-color: #28353B;
+  --accent2-color: #E6E6E6;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: 'Montserrat', sans-serif;
+  --paragraph-font: 'Courier Prime', monospace;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #396E94  ;
-  --nav-link-color: #396E94;
-  --nav-background-color: #D4AC0D;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #396E94;
+  --headline-color-on-white: #FE6152;  /* headlines on a white background */ 
+  --headline-color-on-color: #28353B;/* headlines on a colored background */ 
+  --paragraph-color-on-white: #28353B; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #28353B; /* paragraph text on a colored background */ 
+  --paragraph-background-color: #FE6152;
+  --nav-link-color: #FE6152;
+  --nav-background-color: #FBFF12;
+  --nav-hover-link-color: #FBFF12;
+  --nav-hover-background-color: #FE6152;
 }
 
 
@@ -35,8 +36,10 @@ body {
   padding: 4em;
   font-size: 18px;
   text-align: center;
+  background-color: var(--accent2-color);
 }
 img {
+  width: 100%;
   display: block;
   margin: 0 auto;
 }
@@ -83,15 +86,20 @@ p {
 
 .primary {
   background-color: var(--primary-color);
+  font-family: var(--heading-font);
 }
 .secondary {
   background-color: var(--secondary-color);
+  font-family: var(--heading-font);
 }
 .accent1 {
   background-color: var(--accent1-color);
+  font-family: var(--heading-font);
+  color: white;
 }
 .accent2{
   background-color: var(--accent2-color);
+  font-family: var(--heading-font);
 }
 
 p.colored {
@@ -119,10 +127,12 @@ nav a {
 }
 nav a:link, nav a:visited {
   color: var(--nav-link-color);
+  font-family: var(--heading-font);
 }
 nav a:hover {
   color: var(--nav-hover-link-color);
   background-color: var(--nav-hover-background-color);
+  font-family: var(--heading-font);
 }
 
 .sitemap {
@@ -145,16 +155,19 @@ nav a:hover {
   grid-area: home;
   background-color: #ccc;
   line-height: 3em;
+  font-family: var(--heading-font);
 }
 .sm-page2 {
   grid-area: page2;
   background-color: #ccc;
   line-height: 3em;
+  font-family: var(--heading-font);
 }
 .sm-page3 {
   grid-area: page3;
   background-color: #ccc;
   line-height: 3em;
+  font-family: var(--heading-font);
 }
 
 .top {
